--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.2",
     "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
+    "node-geocoder": "^4.0.0",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
