--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.0",
     "electron-releases": "^3.942.0",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.0.0",
