--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.0.0",
+    "nodemailer": "^6.7.3",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
